; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_cifsencrypt.c_cifs_sign_smbv.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_cifsencrypt.c_cifs_sign_smbv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvec = type { i32 }
%struct.TCP_Server_Info = type { i32 }
%struct.smb_rqst = type { i32, %struct.kvec* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cifs_sign_smbv(%struct.kvec* %0, i32 %1, %struct.TCP_Server_Info* %2, i32* %3) #0 {
  %5 = alloca %struct.kvec*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TCP_Server_Info*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.smb_rqst, align 8
  store %struct.kvec* %0, %struct.kvec** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.TCP_Server_Info* %2, %struct.TCP_Server_Info** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = getelementptr inbounds %struct.smb_rqst, %struct.smb_rqst* %9, i32 0, i32 0
  %11 = load i32, i32* %6, align 4
  store i32 %11, i32* %10, align 8
  %12 = getelementptr inbounds %struct.smb_rqst, %struct.smb_rqst* %9, i32 0, i32 1
  %13 = load %struct.kvec*, %struct.kvec** %5, align 8
  store %struct.kvec* %13, %struct.kvec** %12, align 8
  %14 = load %struct.TCP_Server_Info*, %struct.TCP_Server_Info** %7, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @cifs_sign_rqst(%struct.smb_rqst* %9, %struct.TCP_Server_Info* %14, i32* %15)
  ret i32 %16
}

declare dso_local i32 @cifs_sign_rqst(%struct.smb_rqst*, %struct.TCP_Server_Info*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
